<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
      xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>net.filipvanlaenen</groupId>
   <artifactId>asapop</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
   <name>asapop</name>
   <properties>
      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
      <java.version>17</java.version>
      <project.build.javaVersion>${java.version}</project.build.javaVersion>
      <maven.compile.sourceLevel>${java.version}</maven.compile.sourceLevel>
      <maven.compile.targetLevel>${java.version}</maven.compile.targetLevel>
      <junit.jupiter.version>5.7.0</junit.jupiter.version>
      <junit.platform.version>1.7.0</junit.platform.version>
   </properties>
   <dependencies>
      <dependency>
         <groupId>net.filipvanlaenen</groupId>
         <artifactId>kolektoj</artifactId>
         <version>1.0-SNAPSHOT</version>
      </dependency>
      <dependency>
         <groupId>net.filipvanlaenen</groupId>
         <artifactId>laconic</artifactId>
         <version>1.2.0</version>
      </dependency>
      <dependency>
         <groupId>net.filipvanlaenen</groupId>
         <artifactId>nombrajkolektoj</artifactId>
         <version>1.0-SNAPSHOT</version>
      </dependency>
      <dependency>
         <groupId>net.filipvanlaenen</groupId>
         <artifactId>tsvgj</artifactId>
         <version>1.0.0</version>
      </dependency>
      <dependency>
         <groupId>net.filipvanlaenen</groupId>
         <artifactId>txhtmlj</artifactId>
         <version>1.0.0</version>
      </dependency>
      <dependency>
         <groupId>com.fasterxml.jackson.dataformat</groupId>
         <artifactId>jackson-dataformat-yaml</artifactId>
         <version>2.13.1</version>
      </dependency>
      <dependency>
         <groupId>org.junit.jupiter</groupId>
         <artifactId>junit-jupiter-engine</artifactId>
         <version>${junit.jupiter.version}</version>
      </dependency>
      <dependency>
         <groupId>org.junit.platform</groupId>
         <artifactId>junit-platform-launcher</artifactId>
         <version>${junit.platform.version}</version>
         <scope>test</scope>
      </dependency>
      <dependency>
         <groupId>org.junit.platform</groupId>
         <artifactId>junit-platform-runner</artifactId>
         <version>${junit.platform.version}</version>
         <scope>test</scope>
      </dependency>
   </dependencies>
   <repositories>
      <repository>
         <id>fvl-mvn-repo</id>
         <name>fvl-mvn-repo</name>
         <url>https://storage.googleapis.com/fvl-mvn-repo/repo/</url>
      </repository>
   </repositories>
   <build>
      <plugins>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.8.1</version>
            <configuration>
               <source>${maven.compile.sourceLevel}</source>
               <target>${maven.compile.targetLevel}</target>
            </configuration>
         </plugin>
         <plugin>
            <artifactId>maven-assembly-plugin</artifactId>
            <configuration>
               <archive>
                  <manifest>
                     <mainClass>net.filipvanlaenen.asapop.CommandLineInterface</mainClass>
                  </manifest>
               </archive>
               <descriptorRefs>
                  <descriptorRef>jar-with-dependencies</descriptorRef>
               </descriptorRefs>
            </configuration>
         </plugin>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>3.0.0-M3</version>
         </plugin>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-checkstyle-plugin</artifactId>
            <version>3.2.1</version>
            <configuration>
               <configLocation>checkstyle.xml</configLocation>
               <includeTestSourceDirectory>true</includeTestSourceDirectory>
            </configuration>
         </plugin>
         <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-pmd-plugin</artifactId>
            <version>3.16.0</version>
            <configuration>
               <sourceEncoding>${project.build.sourceEncoding}</sourceEncoding>
               <targetJdk>${project.build.javaVersion}</targetJdk>
               <includeTests>true</includeTests>
            </configuration>
         </plugin>
         <plugin>
            <groupId>org.pitest</groupId>
            <artifactId>pitest-maven</artifactId>
            <version>1.7.4</version>
            <dependencies>
               <dependency>
                  <groupId>org.pitest</groupId>
                  <artifactId>pitest-junit5-plugin</artifactId>
                  <version>0.5</version>
               </dependency>
            </dependencies>
         </plugin>
      </plugins>
   </build>
</project>
